# vi-exercise

./: README.md  data_ingestion.py  featurization.py  main.py  model.py  pyproject.toml
Jupyter/: eda.ipynb  train_test.ipynb
